[tool.poetry]
name = "maplerad-python"
version = "0.1.0"
description = "API wrapper for Maplerad"
authors = ["madvirus-ops <edwinayabie1@gmail.com>"]
homepage = "https://maplerad.com"



[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
